# Web_midterm

./: README.md
backend/: database.py  main.py  pyproject.toml
backend/auth/: dependencies.py  jwt.py
backend/item/: models.py  router.py  schemas.py  service.py
backend/user/: models.py  router.py  schemas.py  service.py
frontend/: index.html
frontend/css/: login-register-modal.css  style.css
frontend/js/: item-api.js  login-register-modal.js  navbar.js
